--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <p>Верхний колонтитул</p>
+        <p>Изменения для проверки</p>
     </header>
     <nav>
         <a href="#">Ссылка 1</a> | <a href="#">Ссылка 2</a> | <a href="#">Ссылка 3</a> |
