--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <a href="#">Ссылка 1</a> | <a href="#">Ссылка 2</a> | <a href="#">Ссылка 3</a> |
     </nav>
     <main>
-        <h1>Главный заголовок сайта</h1>
+        <h1>Тест GITHUB</h1>
         <p>Основное содержимое Main</p>
         <section>
             <h2>Заголовок второго уровня</h2>
